Fix History bar on IE

--- a/ui/app/styles/main.css
+++ b/ui/app/styles/main.css
@@ -198,6 +198,7 @@ footer {
 }
 
 .historyfilter > button , .historyfilter > .datepicker {
+ 	height: 44px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -207,6 +208,7 @@ footer {
 	padding-right: 0;
 	padding-left: 0;
 	width: 100%;
+ 	height: 44px;
 }
 
 .historyfilter > .datepicker {
